# HGB-Caching

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: twitter45.prepared.meta.json
data/processed/: cluster045_prep.meta.json  twitter45.meta.json
results/tw_ablate_no_imbalance/: benchmark.csv  feature_selection.json  hardware_plan.json
results/tw_ablate_weight_only/: benchmark.csv  feature_selection.json  hardware_plan.json
results/tw_baseline_nooptuna/: benchmark.csv  hardware_plan.json
results/tw_cache5000/: benchmark.csv  feature_selection.json  hardware_plan.json
results/tw_latency_c90_b16/: benchmark.csv  hardware_plan.json
results/tw_max_hits_unlimited/: benchmark.csv  hardware_plan.json  imbalance_report.json
results/tw_pruned_imbalance/: benchmark.csv  hardware_plan.json  imbalance_report.json
results/tw_quality_c128_b8/: benchmark.csv  feature_selection.json  hardware_plan.json
results/twitter45_c100_hybrid_optuna15/: benchmark.csv  hardware_plan.json
results/twitter45_c100_none_optuna15/: benchmark.csv  hardware_plan.json  imbalance_report.json
results/twitter45_c250_hybrid_optuna15/: benchmark.csv  feature_selection.json  hardware_plan.json  imbalance_report.json
results/twitter45_c250_none_optuna15/: benchmark.csv  hardware_plan.json
results/twitter45_c500_hybrid_optuna15/: benchmark.csv  hardware_plan.json
results/twitter45_c500_none_optuna15/: benchmark.csv  feature_selection.json  hardware_plan.json
src/cacheml/: cli.py  common.py  config.py  data.py  (+10 more)
src/cacheml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
