[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cacheml"
version = "0.4.0"
description = "ML-augmented cache replacement benchmark with no admission rejection and full CPU/RAM mode"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
